# ink-papi-frontend-demo

./: README.md  deploy.js
.papi/: polkadot-api.json
.papi/contracts/: counter.json
contracts/: counter.contract
counter/: .gitignore  Cargo.toml  lib.rs
frontend/: package-lock.json  package.json  polkadot-api.json
frontend/.papi/: polkadot-api.json
frontend/src/: App.css  App.tsx  index.css
