[package]
name = "counter"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.2", default-features = false }
scale-info = { version = "2.6", default-features = false }

[dev-dependencies]
ink_e2e = "5.0.2"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
